plugins {
    id 'java'
    id 'checkstyle'
}

repositories {
    mavenLocal()
    maven { url = 'https://repo.runelite.net' }
    mavenCentral()
}

def runeLiteVersion = 'latest.release'

dependencies {
    compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'junit:junit:4.13.2'
    testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}

group = 'com.killclog'
version = '2.4.0'
sourceCompatibility = '11'
targetCompatibility = '11'

checkstyle {
    toolVersion = '8.25'
    configDirectory = file("config/checkstyle")
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:deprecation']
}

task run(type: JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.killclog.KillClogPluginTest'
    jvmArgs = ['-ea']
}

task chatCommandReference(type: JavaExec) {
    description = 'Print the chat page and alias table for docs/chat-commands.md'
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.killclog.ChatPageCatalogTest'
}
